--- a/resume.html
+++ b/resume.html
@@ -4,18 +4,18 @@
     <meta charset="utf-8">
     <title>Resume</title>
   </head>
-  
+ 
   <body>
     <header>
       <nav>
         <ul>
           <li><a href="index.html">Homepage</a></li>
           <li><a href="resume.html">Resume</a></li>
-          <li><a href="page3.html">Video Profile</a></li>
+          <li><a href="topic.html">Topic</a></li>
         </ul>
       </nav>
     </header>
-    <h1>Daniel Krieglstein's Resume</h1>
+    <h1>Jonathan Parraga's Resume</h1>
     <section id="pinfo">
       <h2>Contact Information</h2>
       <p>DJ K.</p>
@@ -44,9 +44,9 @@
     </section>
     
     <footer>
-      <p>Created by Daniel Krieglstein</p>
+      <p>Created by Jonathan Parraga</p>
       <address>
-        <p><a href="mailto:kriedan@iit.edu">kriedan@iit.edu</a></p>
+        <p><a href="mailto:jparraga@hawk.illinoistech.edu">kriedan@iit.edu</a></p>
       </address>
     </footer>
   </body>
