--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <ul>
           <li><a href="index.html">Homepage</a></li>
           <li><a href="resume.html">Resume</a></li>
-          <li><a href="page3.html">Video Profile</a></li>
+          <li><a href="topic.html">Topic</a></li>
         </ul>
       </nav>
     </header>
