resume page update

--- a/resume.html
+++ b/resume.html
@@ -18,35 +18,35 @@
     <h1>Jonathan Parraga's Resume</h1>
     <section id="pinfo">
       <h2>Contact Information</h2>
-      <p>DJ K.</p>
-      <p>IIT Tower Chiago IL.</p>
-      <p>kriedan@iit.edu</p>
-      <p><a href="https://www.linkedin.com/in/danielkrieglstein">My Linkin</a></p>
+      <p>Logan Square, Chicago., IL.</p>
+      <p>Email: jparraga@hawk.illinoistech.edu</p>
+      <p><a href="https://www.linkedin.com/in/jonathan-parraga">My Linkin</a></p>
     </section>
     <section id="education">
       <h2>Education</h2>
       <ol>
         <li>Highschool</li>
-        <li>Associates</li>
-        <li>Bachelors (expected spring 2020)</li>
+        <li>Associate of Applied Science Degree in Programmin and Systems Analysis (2004)</li>
+        <li>Bachelor in Information Technology (expected Fall 2026)</li>
       </ol>
       <h2>Certificates</h2>
       <ol>
-        <li>HTML Certified</li>
+        <li>MIKROTIK MTCNA AND MTCRE CERTIFICATION</li>
+		<li>DATABASE ADMINISTRATOR SQL SERVER 2016 + AZURE FUND</li>
+		<li>WINDOWS SERVER 2016 + AZURE ADMINISTRATOR</li>
       </ol>
     </section>
     <section id="accolades">
       <h2>Accolades</h2>
       <p>
-        "Professor Krieglstein is the best teacher
-        in the Midwest, but he can't spell worth a damn" - Student number 1
+        I implemented an automated user provisioning integration between Jenzabar One, Active Directory, Azure, AccessIT, and UniFLOW using PowerShell, enabling seamless account creation, synchronization, and card ID data flow across all systems.
       </p>
     </section>
     
     <footer>
       <p>Created by Jonathan Parraga</p>
       <address>
-        <p><a href="mailto:jparraga@hawk.illinoistech.edu">kriedan@iit.edu</a></p>
+        <p><a href="mailto:jparraga@hawk.illinoistech.edu">jparraga@hawk.illinois.tech.edu</a></p>
       </address>
     </footer>
   </body>
