--- a/topic.html
+++ b/topic.html
@@ -1,22 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>topic.html</title>
+</head>
+<body>
+  <header>
+    <h1>Venezuela: Human Rights and the Venezuelan Diaspora</h1>
+    <nav aria-label="Primary navigation">
+      <ul>
+        <li><a href="index.html">index.html</a></li>
+        <li><a href="resume.html">resume.html</a></li>
+        <li><a href="topic.html">topic.html</a></li>
+      </ul>
+    </nav>
+  </header>
 
-  <head>
-    <meta charset="UTF-8">
-    <title>Other</title>
-  </head>
-  
-  <body>
-    <header>
-      <nav>
+  <main>
+    <article>
+      <section>
+        <h2>Overview</h2>
+        <p>
+          Over the past years, Venezuela has faced a deep political and social crisis that has affected daily life,
+          public institutions, and basic freedoms. Many observers, journalists, and human rights organizations describe
+          a pattern of repression against dissent, weakening of democratic checks and balances, and restrictions on civil
+          liberties. These conditions have contributed to widespread instability and a major wave of forced migration.
+        </p>
+        <p>
+          This page summarizes common human rights concerns reported by international organizations and explains why
+          millions of Venezuelans have left the country. It also highlights the regional impact of this displacement
+          across Latin America and beyond.
+        </p>
+      </section>
+
+      <section>
+        <h2>Human Rights Concerns</h2>
+        <p>
+          Reports from international human rights groups frequently mention issues such as arbitrary detention, harassment
+          of political opponents, restrictions on freedom of expression, and the use of security forces to suppress protests.
+          In addition, humanitarian conditions have been linked to shortages and reduced access to essential services that
+          affect quality of life and personal security.
+        </p>
+        <p>
+          These concerns are not only political. They also impact families, students, workers, and communities that depend
+          on stable services, predictable rule of law, and protection of basic rights. When institutions fail to protect
+          people consistently, trust collapses and many individuals decide to leave in search of safety and opportunity.
+        </p>
+
+        <h3>Examples of rights affected</h3>
         <ul>
-          <li><a href="index.html">Homepage</a></li>
-          <li><a href="resume.html">Resume</a></li>
-          <li><a href="topic.html">Topic</a></li>
+          <li>Freedom of expression and access to independent information</li>
+          <li>Due process protections and fair treatment under the law</li>
+          <li>Freedom of assembly during public demonstrations</li>
+          <li>Personal security and protection from abuse or intimidation</li>
         </ul>
-      </nav>
-    </header>
-    <h1>Other Page</h1>
+      </section>
 
-  </body>
+      <section>
+        <h2>The Venezuelan Diaspora</h2>
+        <p>
+          The Venezuelan diaspora is one of the largest displacement movements in the region in recent times. Many people
+          left because they could not meet basic needs, could not find stable work, or felt unsafe. Others departed to
+          support relatives through remittances, continue education, or access healthcare.
+        </p>
+        <p>
+          Migration has reshaped families and communities. Some people travel by land over long distances, while others
+          relocate through legal pathways when available. Host countries have responded in different ways, balancing
+          humanitarian support with the challenges of housing, employment, and integration.
+        </p>
+
+        <figure>
+          <img src="media/images/diaspora-map.svg" alt="Map showing Venezuelan diaspora around the world">
+          <figcaption>
+            Figure 1. Map illustrating Venezuelan diaspora locations. Source and license should be credited according to the image file used.
+          </figcaption>
+        </figure>
+      </section>
+
+      <section>
+        <h2>Regional Impact</h2>
+        <p>
+          Neighboring countries have received large numbers of Venezuelan migrants and refugees, which has created both
+          opportunities and challenges. Many newcomers contribute through work, entrepreneurship, and community ties, but
+          the sudden scale of migration can also strain services and require coordinated policy responses.
+        </p>
+        <p>
+          Long term solutions often involve legal status pathways, access to education and healthcare, and protections
+          against exploitation. International cooperation is important because displacement does not stop at borders.
+        </p>
+
+        <figure>
+          <img src="media/images/migrant-crisis.jpg" alt="People traveling during the Venezuela migration crisis">
+          <figcaption>
+            Figure 2. Photo representing displacement and migration. Source and license should be credited according to the image file used.
+          </figcaption>
+        </figure>
+      </section>
+
+      <section>
+        <h2>Key Terms</h2>
+        <dl>
+          <dt>Human rights</dt>
+          <dd>Basic protections and freedoms that belong to all people, such as safety, due process, and free expression.</dd>
+
+          <dt>Diaspora</dt>
+          <dd>A community of people living outside their country of origin, often formed through migration or displacement.</dd>
+
+          <dt>Refugee and migrant</dt>
+          <dd>Terms often used to describe people who move across borders, sometimes for safety and sometimes for economic and social reasons.</dd>
+        </dl>
+      </section>
+
+      <section>
+        <h2>Sources for Further Reading</h2>
+        <p>
+          The links below are examples of organizations that publish reports and data related to Venezuela, human rights,
+          and displacement.
+        </p>
+        <ul>
+          <li><a href="https://www.ohchr.org/">Office of the United Nations High Commissioner for Human Rights</a></li>
+          <li><a href="https://www.unhcr.org/">UNHCR: The UN Refugee Agency</a></li>
+          <li><a href="https://www.hrw.org/">Human Rights Watch</a></li>
+          <li><a href="https://www.amnesty.org/">Amnesty International</a></li>
+          <li><a href="https://www.r4v.info/">R4V: Response for Venezuelans</a></li>
+        </ul>
+      </section>
+    </article>
+  </main>
+
+  <footer>
+    <p>Created by Jonathan Parraga</p>
+  </footer>
+</body>
 </html>
