--- a/topic.html
+++ b/topic.html
@@ -5,131 +5,98 @@
   <title>topic.html</title>
 </head>
 <body>
-  <header>
-    <h1>Venezuela: Human Rights and the Venezuelan Diaspora</h1>
-    <nav aria-label="Primary navigation">
-      <ul>
-        <li><a href="index.html">index.html</a></li>
-        <li><a href="resume.html">resume.html</a></li>
-        <li><a href="topic.html">topic.html</a></li>
-      </ul>
-    </nav>
-  </header>
+  <h1>Venezuela: human rights and the diaspora</h1>
 
-  <main>
-    <article>
-      <section>
-        <h2>Overview</h2>
-        <p>
-          Over the past years, Venezuela has faced a deep political and social crisis that has affected daily life,
-          public institutions, and basic freedoms. Many observers, journalists, and human rights organizations describe
-          a pattern of repression against dissent, weakening of democratic checks and balances, and restrictions on civil
-          liberties. These conditions have contributed to widespread instability and a major wave of forced migration.
-        </p>
-        <p>
-          This page summarizes common human rights concerns reported by international organizations and explains why
-          millions of Venezuelans have left the country. It also highlights the regional impact of this displacement
-          across Latin America and beyond.
-        </p>
-      </section>
+  <ul>
+    <li><a href="Homepage">index.html</a></li>
+    <li><a href="Resume">resume.html</a></li>
+    <li><a href="Topic">topic.html</a></li>
+  </ul>
 
-      <section>
-        <h2>Human Rights Concerns</h2>
-        <p>
-          Reports from international human rights groups frequently mention issues such as arbitrary detention, harassment
-          of political opponents, restrictions on freedom of expression, and the use of security forces to suppress protests.
-          In addition, humanitarian conditions have been linked to shortages and reduced access to essential services that
-          affect quality of life and personal security.
-        </p>
-        <p>
-          These concerns are not only political. They also impact families, students, workers, and communities that depend
-          on stable services, predictable rule of law, and protection of basic rights. When institutions fail to protect
-          people consistently, trust collapses and many individuals decide to leave in search of safety and opportunity.
-        </p>
+  <h2>Why I am writing this</h2>
+  <p>
+    I am Venezuelan, and I am part of the diaspora. I did not leave because I wanted a change of scenery or a fun
+    adventure. I left because my life was in danger for opposing the regime. I was not leaving because of money at first.
+    I had a technology consulting business and a solid financial base, so I could have held on for a while.
+<  /p>
+  <p>
+    But the country kept getting harder to live in. Power outages became normal, sometimes for long stretches. Getting
+    fuel could mean lines that lasted for days. And even when the power came back, the internet often did not. My business
+    depended on electricity and connectivity, and both were unreliable. More importantly, the future did not look good. I
+    could survive the present, but I could not build a safe, stable life long term.
+  </p>
+  <p>
+    What hurts the most is that this did not happen because of a traditional war or a huge natural disaster. It happened
+    in slow motion. The country kept breaking, rules stopped working, and normal things became impossible. That is how
+    millions of people ended up leaving.
+  </p>
 
-        <h3>Examples of rights affected</h3>
-        <ul>
-          <li>Freedom of expression and access to independent information</li>
-          <li>Due process protections and fair treatment under the law</li>
-          <li>Freedom of assembly during public demonstrations</li>
-          <li>Personal security and protection from abuse or intimidation</li>
-        </ul>
-      </section>
+  <h2>What it felt like</h2>
+  <p>
+    People talk about numbers, but for me it is faces. Friends from school living in different countries. Family members
+    scattered. Group chats that never stop because everyone is always trying to help someone with paperwork, housing, or
+    a job lead. You learn to say goodbye a lot, and after a while it feels like everyone is leaving.
+  </p>
+  <p>
+    When your country is unstable, you stop trusting basic things. You worry about safety, about services, about work,
+    and about what happens if you speak up. Even if you try to stay focused and mind your business, the situation finds a
+    way to affect you.
+  </p>
 
-      <section>
-        <h2>The Venezuelan Diaspora</h2>
-        <p>
-          The Venezuelan diaspora is one of the largest displacement movements in the region in recent times. Many people
-          left because they could not meet basic needs, could not find stable work, or felt unsafe. Others departed to
-          support relatives through remittances, continue education, or access healthcare.
-        </p>
-        <p>
-          Migration has reshaped families and communities. Some people travel by land over long distances, while others
-          relocate through legal pathways when available. Host countries have responded in different ways, balancing
-          humanitarian support with the challenges of housing, employment, and integration.
-        </p>
+  <h2>Human rights and daily life</h2>
+  <p>
+    A big part of the crisis is connected to human rights issues. There are reports about repression, people being
+    detained for political reasons, pressure on the press, and protests being answered with force. On a personal level,
+    that creates fear. It makes people feel like there is no fair system to protect them.
+  </p>
+  <ul>
+    <li>Fear of speaking freely</li>
+    <li>Uncertainty about fair treatment</li>
+    <li>Stress around safety and intimidation</li>
+    <li>Feeling like institutions do not protect regular people</li>
+  </ul>
 
-        <figure>
-          <img src="media/images/diaspora-map.svg" alt="Map showing Venezuelan diaspora around the world">
-          <figcaption>
-            Figure 1. Map illustrating Venezuelan diaspora locations. Source and license should be credited according to the image file used.
-          </figcaption>
-        </figure>
-      </section>
+  <h2>The Venezuelan diaspora</h2>
+  <p>
+    Venezuela has become one of the largest diasporas of our time without a traditional war or a massive natural
+    cataclysm. That is hard to explain to people who have never lived it. Imagine a whole country where more and more
+    people decide that leaving is the only realistic option.
+  </p>
+  <p>
+    For many of us, migration was not a single event. It was a long process. First you think about it. Then you delay it.
+    Then something happens and you realize you cannot keep waiting. You pack your life into a few bags and you start over
+    somewhere else.
+  </p>
 
-      <section>
-        <h2>Regional Impact</h2>
-        <p>
-          Neighboring countries have received large numbers of Venezuelan migrants and refugees, which has created both
-          opportunities and challenges. Many newcomers contribute through work, entrepreneurship, and community ties, but
-          the sudden scale of migration can also strain services and require coordinated policy responses.
-        </p>
-        <p>
-          Long term solutions often involve legal status pathways, access to education and healthcare, and protections
-          against exploitation. International cooperation is important because displacement does not stop at borders.
-        </p>
+  <img src="media/images/diaspora-map.jpg" alt="Map showing the Venezuelan diaspora Top 10 biggest communities">
 
-        <figure>
-          <img src="media/images/migrant-crisis.jpg" alt="People traveling during the Venezuela migration crisis">
-          <figcaption>
-            Figure 2. Photo representing displacement and migration. Source and license should be credited according to the image file used.
-          </figcaption>
-        </figure>
-      </section>
+  <h2>Starting over</h2>
+  <p>
+    Starting over sounds simple, but it is not. You have to learn new systems, new rules, and sometimes a new language.
+    You miss your people, your food, your holidays, and the feeling of being understood without explaining everything.
+    You work hard, you adapt, and you keep going because you do not want your sacrifice to be wasted.
+  </p>
+  <p>
+    The diaspora is pain, but it is also resilience. I have met Venezuelans who arrive with nothing and build a life from
+    scratch. They work, study, help their families, and try to do things the right way. That is something I respect a
+    lot.
+  </p>
 
-      <section>
-        <h2>Key Terms</h2>
-        <dl>
-          <dt>Human rights</dt>
-          <dd>Basic protections and freedoms that belong to all people, such as safety, due process, and free expression.</dd>
+  <img src="media/images/migrant-crisis.jpg" alt="People traveling during the Venezuelan migration crisis">
+  <img src="media/images/venezuelan-refugee-crisis.jpg" alt="People traveling during the Venezuelan migration crisis">
+  <img src="media/images/venezuelan-dairen.jpg" alt="People crossing one of the most dangerous jungles in the Americas">
 
-          <dt>Diaspora</dt>
-          <dd>A community of people living outside their country of origin, often formed through migration or displacement.</dd>
+  <iframe width="1340" height="754" src="https://www.youtube.com/embed/BTFZkC7u_Vw" title="Trailer Venezuelan Diaspora: Sounds Of Hope - short documentary 2025 " frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; allowfullscreen></iframe>
 
-          <dt>Refugee and migrant</dt>
-          <dd>Terms often used to describe people who move across borders, sometimes for safety and sometimes for economic and social reasons.</dd>
-        </dl>
-      </section>
-
-      <section>
-        <h2>Sources for Further Reading</h2>
-        <p>
-          The links below are examples of organizations that publish reports and data related to Venezuela, human rights,
-          and displacement.
-        </p>
-        <ul>
-          <li><a href="https://www.ohchr.org/">Office of the United Nations High Commissioner for Human Rights</a></li>
-          <li><a href="https://www.unhcr.org/">UNHCR: The UN Refugee Agency</a></li>
-          <li><a href="https://www.hrw.org/">Human Rights Watch</a></li>
-          <li><a href="https://www.amnesty.org/">Amnesty International</a></li>
-          <li><a href="https://www.r4v.info/">R4V: Response for Venezuelans</a></li>
-        </ul>
-      </section>
-    </article>
-  </main>
-
-  <footer>
-    <p>Created by Jonathan Parraga</p>
-  </footer>
+  <h2>More information</h2>
+  <p>
+    If you want data and reports, these organizations publish information about human rights and displacement.
+  </p>
+  <ul>
+    <li><a href="https://www.ohchr.org/">UN Human Rights Office</a></li>
+    <li><a href="https://www.unhcr.org/">UNHCR</a></li>
+    <li><a href="https://www.r4v.info/">R4V</a></li>
+  </ul>
 </body>
 </html>
+
