--- a/resume.html
+++ b/resume.html
@@ -11,9 +11,9 @@
 
     <nav>
       <ul>
-        <li><a href="HomePage">index.html</a></li>
-        <li><a href="Resume">resume.html</a></li>
-        <li><a href="Topic">topic.html</a></li>
+        <li><a href="index.html">Homepage</a></li>
+        <li><a href="resume.html">Resume</a></li>
+        <li><a href="topic.html">Topic</a></li>
       </ul>
     </nav>
   </header>
