--- a/topic.html
+++ b/topic.html
@@ -8,9 +8,9 @@
   <h1>Venezuela: human rights and the diaspora</h1>
 
   <ul>
-    <li><a href="Homepage">index.html</a></li>
-    <li><a href="Resume">resume.html</a></li>
-    <li><a href="Topic">topic.html</a></li>
+      <li><a href="index.html">Homepage</a></li>
+      <li><a href="resume.html">Resume</a></li>
+      <li><a href="topic.html">Topic</a></li>
   </ul>
 
   <h2>Why I am writing this</h2>
