--- a/topic.html
+++ b/topic.html
@@ -68,7 +68,10 @@
     somewhere else.
   </p>
 
-  <img src="media/images/diaspora-map.jpg" alt="Map showing the Venezuelan diaspora Top 10 biggest communities">
+  <figure>
+    <img src="media/images/diaspora-map.jpg" alt="Map showing the Venezuelan diaspora Top 10 biggest communities">
+	<figcaption>A map showing the Venezuelan diaspora Top 10 biggest communities.</figcaption>
+  </figure>
 
   <h2>Starting over</h2>
   <p>
@@ -82,11 +85,22 @@
     lot.
   </p>
 
-  <img src="media/images/migrant-crisis.jpg" alt="People traveling during the Venezuelan migration crisis">
-  <img src="media/images/venezuelan-refugee-crisis.jpg" alt="People traveling during the Venezuelan migration crisis">
-  <img src="media/images/venezuelan-dairen.jpg" alt="People crossing one of the most dangerous jungles in the Americas">
-
-  <iframe width="640" height="360" src="https://www.youtube.com/embed/BTFZkC7u_Vw" title="Trailer Venezuelan Diaspora: Sounds Of Hope - short documentary 2025 " frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; allowfullscreen></iframe>
+  <figure>
+    <img src="media/images/migrant-crisis.jpg" alt="People traveling during the Venezuelan migration crisis">
+	<figcaption>Migration routes can be long and dangerous for families.</figcaption>
+  </figure>
+	
+  <figure>	
+    <img src="media/images/venezuelan-refugee-crisis.jpg" alt="People traveling during the Venezuelan migration crisis">
+    <figcaption>Many people travel with limited resources and uncertain conditions.</figcaption>
+  </figure>
+  <figure>	
+    <img src="media/images/venezuelan-dairen.jpg" alt="People crossing one of the most dangerous jungles in the Americas">
+    <figcaption>The Darien Gap is one of the most dangerous parts of some migration routes.</figcaption>
+  </figure>
+  <h2>Video</h2>
+   <p>This is a video music trailer about the Venezuelan diaspora and personal stories of migration.</p>
+  <iframe width="640" height="360" src="https://www.youtube.com/embed/BTFZkC7u_Vw" title="Trailer Venezuelan Diaspora: Sounds Of Hope - short documentary 2025" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
   <h2>More information</h2>
   <p>
