--- a/topic.html
+++ b/topic.html
@@ -94,10 +94,12 @@
     <img src="media/images/venezuelan-refugee-crisis.jpg" alt="People traveling during the Venezuelan migration crisis">
     <figcaption>Many people travel with limited resources and uncertain conditions.</figcaption>
   </figure>
+  
   <figure>	
     <img src="media/images/venezuelan-dairen.jpg" alt="People crossing one of the most dangerous jungles in the Americas">
     <figcaption>The Darien Gap is one of the most dangerous parts of some migration routes.</figcaption>
   </figure>
+
   <h2>Video</h2>
    <p>This is a video music trailer about the Venezuelan diaspora and personal stories of migration.</p>
   <iframe width="640" height="360" src="https://www.youtube.com/embed/BTFZkC7u_Vw" title="Trailer Venezuelan Diaspora: Sounds Of Hope - short documentary 2025" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -107,9 +109,9 @@
     If you want data and reports, these organizations publish information about human rights and displacement.
   </p>
   <ul>
-    <li><a href="https://www.ohchr.org/">UN Human Rights Office</a></li>
-    <li><a href="https://www.unhcr.org/">UNHCR</a></li>
-    <li><a href="https://www.r4v.info/">R4V</a></li>
+    <li><a href="https://www.ohchr.org/en/countries/venezuela">United Nations - Human Rights Office</a></li>
+    <li><a href="https://www.unhcr.org/emergencies/venezuela-situation">UNHCR - The UN Refugee Agency</a></li>
+    <li><a href="https://www.r4v.info/es/refugiadosymigrantes">R4V - Interagency Coordination Platform for Refugees and Migrants from Venezuela</a></li>
   </ul>
 </body>
 </html>
