--- a/topic.html
+++ b/topic.html
@@ -106,7 +106,7 @@
 
   <h2>More information</h2>
   <p>
-    If you want data and reports, these organizations publish information about human rights and displacement.
+    If you want data and reports, these organizations publish information about human rights and displacement in Venezuela.
   </p>
   <ul>
     <li><a href="https://www.ohchr.org/en/countries/venezuela">United Nations - Human Rights Office</a></li>
