--- a/resume.html
+++ b/resume.html
@@ -76,6 +76,7 @@
     <address>
       <p>Email: <a href="mailto:jparraga@hawk.illinoistech.edu">jparraga@hawk.illinoistech.edu</a></p>
     </address>
+    <img src="media/images/venezuelan-flag.png" alt="Venezuelan Flag">  
   </footer>
 </body>
 </html>
