--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </figure>
     
 	<h2>Videos</h2>
-    <h3>The video below is a local MP4 file stored in the repository using a relative path.<h3>
+    <h3>The video below is a local MP4 file stored in the repository using a relative path.</h3>
     <figure>
       <video controls width="577"><source src="media/videos/carvideo.mp4" type="video/mp4">Your browser does not support the video element.</video>
       <figcaption>I almost caused an accident.</figcaption>
