images same witdh

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </header>
   
   <main>
-    <h2>Welcome</h2>
+    <h2>Welcome1</h2>
     <p>
       This site is a three page HTML-only project. It includes a homepage, a resume page, and a topic page. There is no
       CSS and no layout tables. The goal is to practice clean HTML structure and validation.
