--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 <body>
   <header>
     <h1>My Home Page</h1>
+    <p>Made by Jonathan Parraga | Chicago, Illinois</p>
+
     <nav>
       <ul>
-        <li><a href="index.html">Homepage</a></li>
+        <li><a href="index.html">Home Page</a></li>
         <li><a href="resume.html">Resume</a></li>
         <li><a href="topic.html">Topic</a></li>
       </ul>
@@ -17,7 +19,7 @@
   </header>
   
   <main>
-    <h2>Welcome1</h2>
+    <h2>Welcome</h2>
     <p>
       This site is a three page HTML-only project. It includes a homepage, a resume page, and a topic page. There is no
       CSS and no layout tables. The goal is to practice clean HTML structure and validation.
