--- a/topic.html
+++ b/topic.html
@@ -7,10 +7,10 @@
 <body>
   <header>
     <h1>Venezuela: human rights and the diaspora</h1>
-    <p>System Administrator | Chicago, Illinois</p>
+    <p>Made by Jonathan Parraga | Chicago, Illinois</p>
     <nav>
       <ul>
-        <li><a href="index.html">Homepage</a></li>
+        <li><a href="index.html">Home Page</a></li>
         <li><a href="resume.html">Resume</a></li>
         <li><a href="topic.html">Topic</a></li>
       </ul>
