--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
 
     <nav>
       <ul>
-        <li><a href="index.html">Homepage</a></li>
+        <li><a href="index.html">Home Page</a></li>
         <li><a href="resume.html">Resume</a></li>
         <li><a href="topic.html">Topic</a></li>
       </ul>
