--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <header>
-    <h1>Jonathan Parraga</h1>
+    <h1>Jonathan Parraga's Resume</h1>
     <p>System Administrator | Chicago, Illinois</p>
 
     <nav>
@@ -20,7 +20,7 @@
 
   <main>
     <section>
-      <h2>Contact</h2>
+      <h2>Contact Information</h2>
       <ul>
         <li>Location: Logan Square, Chicago, IL</li>
         <li>Email: <a href="mailto:jparraga@hawk.illinoistech.edu">jparraga@hawk.illinoistech.edu</a></li>
